# pyAntDisplay

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  codecov.yml  mypy.ini  pyantdisplay.service  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh  ui_demo.py
.github/workflows/: ci.yml  release.yml
config/: config.yaml  config_local.yaml.example  manufacturers.yaml  sensor_map.yaml
scripts/: 50-ant.rules  ant_libusb_diag.py  install_udev_rules.sh  install_usbserial_blacklist.sh
src/pyantdisplay/: __init__.py  __main__.py  ant_backend.py  cli.py  common.py  config_manager.py  device_manager.py  device_scanner.py  heart_rate_monitor.py  launcher.py  live_monitor.py  main.py  menu_manager.py  mqtt_monitor.py  usb_detector.py
src/pyantdisplay/core/: __init__.py  ant_backend.py  device_scanner.py
src/pyantdisplay/devices/: __init__.py  bike_sensor.py  heart_rate_monitor.py
src/pyantdisplay/managers/: __init__.py  config_manager.py  device_manager.py  menu_manager.py
src/pyantdisplay/services/: __init__.py  app_modes.py  config_manager.py  device_config.py  device_list.py  device_scan.py  device_scanner.py  mqtt_monitor.py
src/pyantdisplay/ui/: __init__.py  data_display.py  live_monitor.py  menu_manager.py
src/pyantdisplay/utils/: __init__.py  common.py  config_loader.py  usb_detector.py
tests/: conftest.py  test_bike_sensor.py  test_cli.py  test_common.py  test_config_loader.py  test_config_manager.py  test_core_components.py  test_data_display.py  test_device_config.py  test_device_manager.py  test_device_scanner.py  test_heart_rate_monitor.py  test_launcher.py  test_live_monitor.py  test_main.py  test_mqtt_monitor.py  test_multi_hr_devices.py  test_usb_detector.py
